[SPv175] Update filter paint property when reflect mask image changes

Reflect mask image takes part in the filter paint property node.
update the property node when reflect mask image changes.

Bug: 807398
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: Ib16263d7646c71fa310a2347bd58e2b8bd708d85
Reviewed-on: https://chromium-review.googlesource.com/895245
Reviewed-by: Tien-Ren Chen <trchen@chromium.org>
Commit-Queue: Tien-Ren Chen <trchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#533436}
Former-commit-id: cb982471989e3957dbba9a2aa9be54f378c31ee0